# agent-starter-pack

./: .gitignore  CONTRIBUTING.md  MAKEFILE  Makefile  README.md  pyproject.toml
.cloudbuild/cd/: test_e2e.yaml
.cloudbuild/ci/: build_use_wheel.yaml  lint.yaml  lint_templated_agents.yaml  test.yaml  test_templated_agents.yaml
.cloudbuild/terraform/: apis.tf  build_triggers.tf  service_account.tf  storage.tf  variables.tf
agents/agentic_rag/: README.md
agents/agentic_rag/app/: agent.py  retrievers.py  templates.py
agents/agentic_rag/template/: .templateconfig.yaml
agents/agentic_rag/tests/integration/: test_agent.py
agents/agentic_rag_vertexai_search/: README.md
agents/agentic_rag_vertexai_search/app/: agent.py  retrievers.py
agents/agentic_rag_vertexai_search/template/: .templateconfig.yaml
agents/crewai_coding_crew/: README.md
agents/crewai_coding_crew/app/: agent.py
agents/crewai_coding_crew/app/crew/: crew.py
agents/crewai_coding_crew/app/crew/config/: agents.yaml  tasks.yaml
agents/crewai_coding_crew/template/: .templateconfig.yaml
agents/crewai_coding_crew/tests/integration/: test_agent.py
agents/langgraph_base_react/: README.md
agents/langgraph_base_react/app/: agent.py
agents/langgraph_base_react/template/: .templateconfig.yaml
agents/langgraph_base_react/tests/integration/: test_agent.py
agents/live_api/app/: agent.py  server.py  templates.py  vector_store.py
agents/live_api/template/: .templateconfig.yaml
agents/live_api/tests/integration/: test_server_e2e.py
agents/live_api/tests/load_test/: load_test.py
agents/multimodal_live_api/: README.md
agents/multimodal_live_api/app/: agent.py  server.py
agents/multimodal_live_api/template/: .templateconfig.yaml
agents/multimodal_live_api/tests/unit/: test_server.py
docs/: README.md  data-ingestion.md  deployment.md  installation.md  observability.md  troubleshooting.md  why_starter_pack.md
docs/cli/: README.md  create.md  setup_cicd.md
src/base_template/: .gitignore  Makefile  README.md  pyproject.toml
src/base_template/app/utils/: tracing.py  typing.py
src/base_template/deployment/: README.md
src/base_template/deployment/cd/: deploy-to-prod.yaml  staging.yaml
src/base_template/deployment/ci/: pr_checks.yaml
src/base_template/deployment/terraform/: apis.tf  build_triggers.tf  iam.tf  locals.tf  log_sinks.tf  providers.tf  service_accounts.tf  storage.tf  variables.tf
src/base_template/deployment/terraform/dev/: apis.tf  iam.tf  log_sinks.tf  providers.tf  storage.tf  variables.tf
src/base_template/deployment/terraform/dev/vars/: env.tfvars
src/base_template/deployment/terraform/vars/: env.tfvars
src/base_template/tests/unit/test_utils/: test_tracing_exporter.py
src/cli/: main.py
src/cli/commands/: create.py  setup_cicd.py
src/cli/utils/: __init__.py  cicd.py  datastores.py  gcp.py  logging.py  template.py  version.py
src/data_ingestion/: README.md  pyproject.toml
src/data_ingestion/data_ingestion_pipeline/: pipeline.py  submit_pipeline.py
src/data_ingestion/data_ingestion_pipeline/components/: ingest_data.py  process_data.py
src/deployment_targets/agent_engine/app/: agent_engine_app.py
src/deployment_targets/agent_engine/app/utils/: gcs.py
src/deployment_targets/agent_engine/tests/integration/: test_agent_engine_app.py
src/deployment_targets/agent_engine/tests/load_test/: README.md  load_test.py
src/deployment_targets/agent_engine/tests/unit/: test_dummy.py
src/deployment_targets/cloud_run/: Dockerfile
src/deployment_targets/cloud_run/app/: server.py
src/deployment_targets/cloud_run/deployment/terraform/: artifact_registry.tf
src/deployment_targets/cloud_run/deployment/terraform/dev/: service_accounts.tf
src/deployment_targets/cloud_run/tests/integration/: test_server_e2e.py
src/deployment_targets/cloud_run/tests/load_test/: README.md  load_test.py
src/deployment_targets/cloud_run/tests/unit/: test_server.py
src/frontends/live_api_react/frontend/: package-lock.json
src/frontends/live_api_react/frontend/public/: index.html
src/frontends/live_api_react/frontend/src/: App.scss  index.css
src/frontends/live_api_react/frontend/src/components/audio-pulse/: audio-pulse.scss
src/frontends/live_api_react/frontend/src/components/control-tray/: control-tray.scss
src/frontends/live_api_react/frontend/src/components/logger/: logger.scss
src/frontends/live_api_react/frontend/src/components/side-panel/: side-panel.scss
src/frontends/streamlit/frontend/: side_bar.py  streamlit_app.py
src/frontends/streamlit/frontend/style/: app_markdown.py
src/frontends/streamlit/frontend/utils/: chat_utils.py  local_chat_history.py  message_editing.py  multimodal_utils.py  stream_handler.py  title_summary.py
src/resources/containers/data_processing/: Dockerfile
src/resources/containers/e2e-tests/: Dockerfile
src/resources/setup_cicd/: cicd_variables.tf  github.tf  providers.tf
src/utils/: generate_locks.py  lock_utils.py  watch_and_rebuild.py
tests/: __init__.py
tests/cicd/: example.env  test_e2e_deployment.py
tests/cli/commands/: test_create.py  test_setup_cicd.py
tests/cli/utils/: test_cicd.py
tests/integration/: test_io_patterns.py  test_template_linting.py  test_templated_patterns.py
tests/test_frontend/: test_side_bar.py  test_streamlit_app.py
tests/test_frontend/test_utils/: test_chat_utils.py  test_local_chat_history.py  test_message_editing.py  test_multimodal_utils.py  test_stream_handler.py
tests/utils/: get_agents.py
