[project]
name = "data-ingestion-pipeline"
version = "0.1.0"
description = "Data ingestion pipeline for RAG retriever"
readme = "README.md"
requires-python = ">=3.9, <=3.13"
dependencies = [
    "google-cloud-aiplatform>=1.80.0",
    "google-cloud-pipeline-components>=2.19.0",
    "kfp>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_ingestion_pipeline"]